style: align items fix

--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,7 @@ h1 {
   gap: 30px;
   grid-template-columns: repeat(auto-fit, minmax(400px, 450px));
   place-content: center;
+  align-items: start;
 
   @media only screen and (max-width: 450px) {
     margin: 10px 0;
